--- a/app/src/main/res/layouts/ui/layout/fragment_transactions_activity.xml
+++ b/app/src/main/res/layouts/ui/layout/fragment_transactions_activity.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:keyboard="http://schemas.android.com/apk/res-auto">
 
-    <TextView
-        android:layout_centerInParent="true"
-        android:layout_centerVertical="true"
-        android:layout_height="wrap_content"
+    <in.siddhant.numbergrid.NumberFrameLayout
         android:layout_width="wrap_content"
-        android:text="Transactions"/>
+        android:layout_height="wrap_content"
+        keyboard:keyboardType="decimal"
+        android:id="@+id/numberGrid"/>
 
 </RelativeLayout>
