--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -7,4 +7,6 @@
     <dimen name="activity_dialog_content_size">5sp</dimen>
     <dimen name="activity_dialog_positive_button_size">6sp</dimen>
     <dimen name="activity_dialog_negative_button_size">6sp</dimen>
+
+    <dimen name="detail_backdrop_height">270dp</dimen>
 </resources>
